[gd_scene load_steps=22 format=3 uid="uid://cmf8jmyko5raq"]

[ext_resource type="Script" path="res://Scenes/Game_Object/Grey_Rat_Enemy/grey_rat_enemy.gd" id="1_10ca6"]
[ext_resource type="PackedScene" uid="uid://bv8nyyi5juhsa" path="res://Scenes/Component/health_component.tscn" id="2_5snas"]
[ext_resource type="PackedScene" uid="uid://d183qaf53bq5" path="res://Scenes/Component/vial_drop_component.tscn" id="3_mo7jv"]
[ext_resource type="PackedScene" uid="uid://dpakoqqbwi0wr" path="res://Scenes/Component/velocity_component.tscn" id="4_8fj5t"]
[ext_resource type="PackedScene" uid="uid://cyc1uct5x1ohn" path="res://Scenes/Component/death_component.tscn" id="5_2g741"]
[ext_resource type="PackedScene" uid="uid://d1h0pl2teir4u" path="res://Scenes/Component/hit_flash_component.tscn" id="5_npeci"]
[ext_resource type="PackedScene" uid="uid://bsxkiwvu61ges" path="res://Scenes/Component/hurtbox_component.tscn" id="6_b4d8p"]
[ext_resource type="Shader" path="res://Scenes/Component/hit_flash_component.gdshader" id="6_q7jj4"]
[ext_resource type="Texture2D" uid="uid://38nuwpgea5jt" path="res://Scenes/Game_Object/Grey_Rat_Enemy/grey_rat.png" id="7_ttf57"]
[ext_resource type="AudioStream" uid="uid://seorsatm6vvt" path="res://Assets/Audio/SFX/footstep_carpet_000.ogg" id="9_dwo87"]
[ext_resource type="AudioStream" uid="uid://bdf0u1mv4rwd7" path="res://Assets/Audio/SFX/footstep_carpet_001.ogg" id="10_tp7dr"]
[ext_resource type="AudioStream" uid="uid://56lwfj3xtyep" path="res://Assets/Audio/SFX/footstep_carpet_002.ogg" id="11_v3yyp"]
[ext_resource type="PackedScene" uid="uid://cv8jqrdbbodjd" path="res://Scenes/Component/random_stream_player_2d_component.tscn" id="11_w6vk5"]
[ext_resource type="AudioStream" uid="uid://bgj5rcxcgmluc" path="res://Assets/Audio/SFX/footstep_carpet_003.ogg" id="12_1cj1b"]
[ext_resource type="AudioStream" uid="uid://5gdhurhtvx5d" path="res://Assets/Audio/SFX/footstep_carpet_004.ogg" id="13_vauy4"]

[sub_resource type="Animation" id="Animation_6u5xr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_4ta3w"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.174533, -0.174533, 0.174533, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ggwni"]
_data = {
"RESET": SubResource("Animation_6u5xr"),
"walk": SubResource("Animation_4ta3w")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uvk7l"]
resource_local_to_scene = true
shader = ExtResource("6_q7jj4")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_m5a4l"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n63gm"]
radius = 6.0

[node name="GreyRatEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_10ca6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
libraries = {
"": SubResource("AnimationLibrary_ggwni")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_5snas")]
max_health = 3.0

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_mo7jv")]
drop_percent = 1.0
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("4_8fj5t")]

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_npeci")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_uvk7l")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_2g741")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HitRandomAudioPlayerComponent" parent="." instance=ExtResource("11_w6vk5")]
max_distance = 300.0
streams = Array[AudioStream]([ExtResource("9_dwo87"), ExtResource("10_tp7dr"), ExtResource("11_v3yyp"), ExtResource("12_1cj1b"), ExtResource("13_vauy4")])

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("6_b4d8p")]
visible = false
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_m5a4l")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("7_ttf57")
offset = Vector2(0, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_n63gm")
